# odoo-task-mcp

./: .env.example  GUIDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  codex-setup.md  cursor-setup.md  security.md
src/odoo_task_mcp/: __init__.py  config.py  exceptions.py  server.py
src/odoo_task_mcp/mcp_tools/: task_tools.py  writeback_tools.py
src/odoo_task_mcp/odoo/: client.py  domains.py  models.py
src/odoo_task_mcp/security/: access_policy.py  redaction.py
src/odoo_task_mcp/services/: attachment_service.py  chatter_service.py  stage_service.py  task_service.py
src/odoo_task_mcp/transform/: html_to_markdown.py  task_formatter.py
tests/: test_access_policy.py  test_config.py  test_domains.py  test_html_to_markdown.py  test_odoo_client_mock.py  test_readonly_writeback.py  test_redaction.py  test_server_tools.py  test_task_formatter.py  test_task_service.py
